// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket funding rate endpoint have data should return success 1`] = `
{
  "data": {
    "epochDuration": 28800,
    "fundingRate": 0.009854,
    "fundingTimestamp": 1740441600,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 4048,
    "providerDataStreamEstablishedUnixMs": 4040,
  },
}
`;

exports[`websocket funding rate endpoint have partial data return success 1`] = `
{
  "data": {
    "epochDuration": 14400,
    "fundingRate": -0.00059603,
    "fundingTimestamp": 1747368000,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 4048,
    "providerDataStreamEstablishedUnixMs": 4040,
  },
}
`;

exports[`websocket funding rate endpoint no data should return failure 1`] = `
{
  "error": {
    "message": "The EA has not received any values from the Data Provider for the requested data yet. Retry after a short delay, and if the problem persists raise this issue in the relevant channels.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 504,
}
`;

exports[`websocket price endpoint have data should return success 1`] = `
{
  "data": {
    "result": 2325.847186068699,
  },
  "result": 2325.847186068699,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1726648165000,
  },
}
`;

exports[`websocket price endpoint no data should return failure 1`] = `
{
  "error": {
    "message": "The EA has not received any values from the Data Provider for the requested data yet. Retry after a short delay, and if the problem persists raise this issue in the relevant channels.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 504,
}
`;
